--- a/TODO
+++ b/TODO
@@ -3,11 +3,12 @@
 
 - Continuous play feature.
 
-  - Expand API to handle search requests for songs and submitters.
-
   - JavaScript web page that queries API for song data, sorts it by service,
     and embeds player as appropriate.
 
   - Should have shuffle / repeat all as well as striaghtforward play capabilities.
 
   - Should have ability to select which services and which submitters to show.
+
+- Find a way to get debugging working with uwsgi, or replicate the app on
+  laptop without nginx / uwsgi.
